# EasyDistillation

./: .gitignore  .pre-commit-config.yaml  4.contraction.py  CHANGELOG.md  DOCUMENTATION_INDEX.md  FILEDATA_DETAILED.md  LICENSE  PROJECT_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  WORKFLOW_ANALYSIS.md  pyproject.toml
doc/: All_Propagator_Classes.md  PropagatorPSV_QuickRef.md  PropagatorPSV_QuickRef_CORRECTED.md  PropagatorPSV_Usage.md  PropagatorPSV_Usage_CORRECTED.md  Propagator_Classes_Comparison.md  Propagator_Quick_Reference.md  README.md  propagator_theory_and_usage.md  unify_vertex_point_color_indices.md
docs/: DISTILLATION_WORKFLOW.md
example/: hardcoding_OhD.py
examples/: test_propagator_psv.py
lattice/: __init__.py  backend.py  base_types.py  dispatch.py  flavor_structure.py  group_projection.py  hadron.py  hadron_irrep.py  preset.py  quark_diagram.py  spatial_structure.py
test/: __init__.py  conftest.py  irrep_vertices_t2pp.pkl  irrep_vertices_t2pp.pkl.meta.pkl  profile_vertex_map_timing_gap.py  t2pp_skeleton.py  test_calc_all_comparison.py  test_calc_calc_disp_consistency.py  test_calc_diagram_bind.py  test_calc_v2v_comparison.py  test_current_contraction.py  test_current_vertex.py  test_detailed_comparison.py  test_disp_vs_product.py  test_einsum_analysis.py  test_gauge_links_methods.py  test_step_by_step.py  test_v2p_p2v_symmetry.py
tests/: conftest.py  test_current_elemental.py  test_diagram.py  test_displacement_elemental.py  test_eigenvector.py  test_elemental.py  test_flavor_structure.py  test_gamma.py  test_gauge_link.py  test_group_projection.py  test_insertion_simple.py  test_load.py  test_mesonspetrum.py  test_perambulator.py  test_perambulator_mpi.py  test_perambulator_phase3.py  test_propagator_with_current.py  test_quark_contract.py  test_quark_diagram_contraction.py  test_sampling_weight.py  test_simplify.py  (+3 more)
(+40 files in other folders)
